<resources>
    <string name="app_name">ConcurrencyEval</string>
    <string name="init_activity_title">Android concurrency models comparison</string>
    <string name="init_choose_problems">Chose one of the problems</string>
    <string name="init_choose_impl">Choose the implementation</string>
    <string name="done">Done</string>
    <string name="mm_title">Matrix multiplication</string>
    <string name="mm_description">Multiplication of two square matrix randomly initialized with size defined by the
        following parameter
    </string>
    <string name="mm_size_label">Matrix size:</string>
    <string name="mm_size_hint">Size</string>
    <string name="tasks_to_run_label">Tasks to use:</string>
    <string name="time_to_run_label">Time to run:</string>
    <string name="tasks_hint">Tasks</string>
    <string name="run_button">Run</string>
    <string name="report">Report</string>
    <string name="time">Time:</string>
    <string name="energy_consumption">Energy consumption:</string>
    <string name="cs_activity_title">Concurrent Sum</string>
    <string name="cs_tv_description">Concurrent sum of numbers that is done by assigning sub sums to different tasks and
        aggregating the results at the end
    </string>
    <string name="cs_tv_numbers_label">Numbers</string>
    <string name="cs_tv_numbers_hint">Numbers</string>
    <string name="ph_activity_title">Philosophers problem</string>
    <string name="ph_tv_description">Philosophers problem used to explore justice on task scheduling</string>
    <string name="ph_tv_philosophers_label">Philosophers</string>
    <string name="justice">Justice:</string>
    <string name="fd_activity_title">Download of images</string>
    <string name="fd_tv_description">Test downloading images</string>
    <string name="ui_activity_title">UI/Background interaction</string>
    <string name="ui_tv_description">Tests how well background tasks interact with the UI thread</string>
    <string name="UiBackInter">UI/Background interaction</string>
    <string name="average">Average: </string>
    <string name="deviation">Deviation: </string>
    <string name="id_downloaded_image_description">Downloaded image</string>
    <string name="consumed_items">Consumed items:</string>
    <string name="produced_items">Produced items:</string>
    <string name="pc_consumers_label">Consumers</string>
    <string name="pc_producers_label">Producers</string>
    <string name="pc_description">Uses Producers-Consumers problem to explore synchronization methods</string>
    <string name="pc_title">Producers Consumers</string>
    <string name="pc_buffer_size_label">Buffer size</string>
    <string name="synchronization_method">Synchronization method:</string>
    <string-array name="problems">
        <item>Matrix multiplication</item>
        <item>Philosophers</item>
        <item>Concurrent sum</item>
        <item>Download of image</item>
        <item>Producers and Consumers</item>
    </string-array>

    <string-array name="mm_implementations">
        <item>Threads</item>
        <item>HaMer framework</item>
        <item>ThreadPool</item>
        <item>Kotlin coroutines</item>
    </string-array>

    <string-array name="cs_implementations">
        <item>Threads</item>
        <item>Threads with barriers</item>
        <item>HaMer framework</item>
        <item>ThreadPool</item>
        <item>Kotlin coroutines</item>
    </string-array>

    <string-array name="ph_implementations">
        <item>Threads</item>
        <item>HaMer framework</item>
        <item>ThreadPool</item>
        <item>Kotlin coroutines</item>
    </string-array>

    <string-array name="id_implementations">
        <item>Threads</item>
        <item>AsyncTask</item>
        <item>HaMeR framework</item>
        <item>IntentServices</item>
        <item>ThreadPool</item>
        <item>Kotlin coroutines</item>
    </string-array>

    <string-array name="pc_implementations">
        <item>Semaphore</item>
        <item>Synchronized</item>
        <item>Atomic variables</item>
        <item>Lock and Condition</item>
    </string-array>

    <string-array name="ph_sync">
        <item>Semaphore</item>
        <item>Synchronized</item>
        <item>Atomic variables</item>
        <item>Lock and Condition</item>
    </string-array>

    <string-array name="images">
        <item>Cat</item>
        <item>Dog</item>
        <item>Lion</item>
        <item>Platypus</item>
        <item>Pigeon</item>
    </string-array>
</resources>
