<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.PhilosophersActivity">

        <TextView
            android:text="@string/ph_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_tv_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/titleColor" android:textSize="24sp" android:layout_marginTop="16dp"/>
        <TextView
            android:text="@string/ph_tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ph_tv_description"
            app:layout_constraintTop_toBottomOf="@+id/ph_tv_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:textColor="@color/descriptionColor"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:gravity="start"/>
        <TextView
            android:text="@string/ph_tv_philosophers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_tv_philosophers" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_tv_description" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColor="@color/textColor"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/time_to_run_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_tv_time"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/ph_et_philosophers" android:layout_marginTop="24dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ph_et_philosophers"
            app:layout_constraintStart_toEndOf="@+id/ph_tv_philosophers" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_tv_description"
            android:textColor="@color/descriptionColor" android:inputType="numberDecimal" tools:ignore="Autofill"
            android:labelFor="@id/ph_et_philosophers"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ph_et_time"
            app:layout_constraintStart_toEndOf="@+id/ph_tv_time" android:layout_marginStart="16dp"
            android:textColor="@color/descriptionColor" android:inputType="numberDecimal" tools:ignore="Autofill"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ph_et_philosophers"
            android:labelFor="@id/ph_et_time"/>
        <Button
            android:text="@string/run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_run_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_et_time" android:background="@color/buttonColor"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_tv_report" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_run_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp"
            android:textColor="@color/titleColor"/>
        <TextView
            android:text="@string/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_average_label" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_tv_report" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColor="@color/textColor"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_average_report" app:layout_constraintStart_toEndOf="@+id/ph_average_label"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_tv_report" android:textSize="18sp"/>

        <TextView
            android:text="@string/deviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_deviation_label" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_average_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColor="@color/textColor"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ph_deviation_report" app:layout_constraintStart_toEndOf="@+id/ph_deviation_label"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ph_average_label" android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/ph_progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:indeterminateTint="@color/progressColor"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/ph_run_button"
            app:layout_constraintTop_toBottomOf="@+id/ph_et_time"
            tools:targetApi="lollipop" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>