<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.ImgDownloadActivity">

        <TextView
            android:text="@string/fd_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fd_tv_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/titleColor" android:textSize="24sp" android:layout_marginTop="16dp"/>
        <TextView
            android:text="@string/fd_tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fd_tv_description"
            app:layout_constraintTop_toBottomOf="@+id/fd_tv_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:textColor="@color/descriptionColor"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:gravity="start"/>

        <Button
            android:id="@+id/fd_run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/buttonColor"
            android:text="@string/run_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_spinner_choose_img" />
        <TextView
            android:text="@string/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fd_tv_report" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/fd_run_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/fd_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_iv_image_report" />

        <TextView
            android:id="@+id/fd_time_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/fd_time_label"
            app:layout_constraintTop_toBottomOf="@+id/id_iv_image_report" />

        <ProgressBar
            android:id="@+id/fd_progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/progressColor"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/fd_run_button"
            app:layout_constraintTop_toBottomOf="@+id/id_spinner_choose_img"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/id_iv_image_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fd_tv_report"
            tools:srcCompat="@tools:sample/avatars[2]"
            android:contentDescription="@string/id_downloaded_image_description" />

        <Spinner
            android:id="@+id/id_spinner_choose_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fd_tv_description" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>