<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.MatMultActivity">

        <TextView
                android:text="@string/mm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mm_tv_title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/titleColor" android:textSize="24sp" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/mm_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/mm_tv_description"
                app:layout_constraintTop_toBottomOf="@+id/mm_tv_title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:textColor="@color/descriptionColor"
                android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp" android:gravity="start"/>
        <TextView
                android:text="@string/mm_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mm_tv_size" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/mm_tv_description" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@color/textColor"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/tasks_to_run_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mm_tv_tasks"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/mm_et_size" android:layout_marginTop="24dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/mm_et_size"
                app:layout_constraintStart_toEndOf="@+id/mm_tv_size" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mm_tv_description"
                android:textColor="@color/descriptionColor" android:inputType="numberDecimal" tools:ignore="Autofill"
                android:labelFor="@id/mm_et_size"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/mm_et_tasks"
                app:layout_constraintStart_toEndOf="@+id/mm_tv_tasks" android:layout_marginStart="16dp"
                android:textColor="@color/descriptionColor" android:inputType="numberDecimal" tools:ignore="Autofill"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/mm_et_size"
                android:labelFor="@id/mm_et_tasks"/>

        <Button
            android:id="@+id/mm_run_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/buttonColor"
            android:text="@string/run_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mm_et_tasks" />
        <TextView
                android:text="@string/report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mm_tv_report" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/mm_run_button" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="24sp"
                android:textColor="@color/titleColor"/>
        <TextView
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mm_time_label" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mm_tv_report" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@color/textColor"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mm_time_report" app:layout_constraintStart_toEndOf="@+id/mm_time_label"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mm_tv_report" android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/mm_progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:indeterminateTint="@color/progressColor"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/mm_run_button"
            app:layout_constraintTop_toBottomOf="@+id/mm_et_tasks"
            tools:targetApi="lollipop" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>