<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InitActivity">
    <TextView
            android:text="@string/init_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/init_tv_title" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="24sp"
            android:textColor="#0A0404"/>
    <TextView
            android:text="@string/init_choose_problems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/init_tv_problem" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/init_tv_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="#202020"/>

    <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/init_spinner_problems"
            app:layout_constraintTop_toBottomOf="@+id/init_tv_problem" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/init_choose_impl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/init_tv_impl"
            app:layout_constraintTop_toBottomOf="@+id/init_spinner_problems"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="#202020" android:layout_marginTop="16dp"/>

    <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/init_spinner_impl"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/init_tv_impl"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/init_b_done"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/init_spinner_impl"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:background="#388E3C" android:textColor="#FFFFFF"/>

</android.support.constraint.ConstraintLayout>